<resources>
    <string name="app_name">TugasPratikum9</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="bio">BIODATA</string>
    <string name="tab_text_1">INPUT</string>
    <string name="tab_text_2">OUTPUT</string>
    <string name="tab_text_3">WEB</string>
    <string name="nama">NAMA</string>
    <string name="npm">NPM</string>
    <string name="email">EMAIL</string>
    <string name="github">GITHUB</string>
</resources>
